--- a/src/index.template.html
+++ b/src/index.template.html
@@ -10,12 +10,16 @@
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="viewport"
     content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (htmlWebpackPlugin.options.ctx.mode.cordova) { %>, viewport-fit=cover<% } %>">
-
   <link rel="icon" type="image/png" href="statics/app-logo-128x128.png">
   <link rel="icon" type="image/png" sizes="16x16" href="statics/icons/favicon-16x16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="statics/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="statics/icons/favicon-96x96.png">
   <link rel="icon" type="image/ico" href="statics/icons/favicon.ico">
+  <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+  >
+  <script src="https://kit.fontawesome.com/5a4bc986c8.js"></script>
 </head>
 
 <body>
