--- a/src/index.template.html
+++ b/src/index.template.html
@@ -11,16 +11,12 @@
   <meta name="viewport"
     content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (htmlWebpackPlugin.options.ctx.mode.cordova) { %>, viewport-fit=cover<% } %>">
   <link rel="icon" type="image/png" href="assets/trip_logo2.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="statics/icons/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="statics/icons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="statics/icons/favicon-96x96.png">
-  <link rel="icon" type="image/ico" href="statics/icons/favicon.ico">
-  <link
-    rel="stylesheet"
-    href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-    crossorigin="anonymous"
-  >
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/trip_logo2.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/trip_logo2.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="assets/trip_logo2.png">
+  <link rel="icon" type="image/ico" href="assets/trip_logo2.png">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <!-- <link
     rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
